Fixed modal offcenter, minor tweaks

--- a/public/style.css
+++ b/public/style.css
@@ -284,6 +284,7 @@ h2 {
 	width:100%;
 	height: 100%;
 	position: fixed;
+	margin: auto;
 }
 
 #add-post-modal {
@@ -329,6 +330,7 @@ h2 {
 	min-height: 350px;
 	background-color: #fff;
 	border-radius: 15px;
+	margin: auto;
 }
 
 .modal-body {
